On NetBSD we already have strpbrk() in libkern, so we don't need to provide another copy in the module.  Removes another 'redefined symbol' error when loading the module.

Related to PR kern/51265